# rain-ops

./: .gitignore  CMakeLists.txt  Makefile  README.md
.codebuddy/: settings.json
.codebuddy/memory/: 2026-03-19.md
extract/: extract_model.py
graph/: main.cu
matmul/: baseline.cu  baseline.h  common.cu  common.h  main.cu  manager.cu  manager.h  mm.cu  mm.h  mm_v1.cu  mm_v2.cu  mm_v3.cu  mm_v4.cu  mm_v5.cu  mm_v6.cu  mm_v7.cu  timer.cu  timer.h
rope/: rope.py
scripts/: nsys.sh
